--- a/公链/彩色币白皮书.md
+++ b/公链/彩色币白皮书.md
@@ -1,1 +1,209 @@
-# 
+# BitcoinX—彩色币 白皮书
+
+作者：Leo (liorhakim@mail.com)、Yoni (yoni.assia@gmail.com)、Meni (menirosenfeld@gmail.com)
+
+翻译：Really
+
+## 摘要
+
+比特币是世界上第一个去中性化的数字货币，用加密令牌可以轻松实现存储和转移，用一个点对点的网络承载信息，对同步数据进行散列处理来防止双重支付，和强有力的脚本处理系统来判别令牌的所有权。不断成长的技术和商业基础支持着比特币的发展。
+
+比特币被设计成一个中性的交换媒介，它是可替代的。尽管如此，通过仔细跟踪一些特定比特币的来龙去脉，可以将它们与其他的比特币区分开来，这些特定比特币就叫作彩色币。它们具有一些特殊的属性，比如支持代理或聚集点 ，从而具有与比特币面值无关的价值。彩色币可以用作替代货币、商品证书、智能财产以及其他金融工具，如股票和债券等。
+
+彩色币本身就是比特币，存储和转移不需要第三方，可以利用已经存在的比特币的基础，因此彩色币可以为现实世界中难以通过传统方法去中心化的事物铺平道路。本文将要讨论彩色币的实现细则及他们的用途。
+
+## 背景
+
+比特币的点对点支付网络已经被确认是安全、稳定和自由的在账户间转移价值的工具。比特币网络协议层本身是安全和稳定的，比特币生态系统的网络服务提供商被黑客攻击过多次，这损害了比特币的声誉和交换价值。
+
+基本的技术和货币的价值的关联导致人们认为技术不可靠，价值如浮云。
+
+## 概述
+
+BitcoinX的理念是在技术上将比特币网络从其货币价值中抽离出来，用比特币网络明确交易并避免双重支付。BitcoinX的目标是在比特币网络的上层便捷地创造新货币。
+
+设想是将我们熟知的比特币开发成两个单独的协议层，这就是，底层基于密码学技术的交易网络，和上层的我们称为彩色币的独特工具的发行网络的设计。
+
+如果我们能在比特币生态系统内发布许多独特的工具，这里是潜在的使用案例：
+
+- 公司可能采用彩色币发行股份，利用比特币的基础设施让人们持有公司股份，交易股份，甚至基于比特币区块链进行投票和分红。
+- 智能资产 假设这里有一个汽车租赁公司，公司可以用彩色币代表每一辆汽车，然后只有当汽车接收到当时拥有彩色币的人利用其私钥进行签署的信息后才能启动汽车。然后可以发布一个智能手机应用，任何人可以用它来广播用他所有的私钥签署过的信息，以及在交易平台上出售自己的彩色币。任何人可以去购买彩色币，把这个手机应用当成汽车钥匙来使用，随意使用这辆汽车，闲暇后再次售出这些彩色币。（译注：汽车产权智能化为彩色币的所有权）
+- 本地社区可能想创建自己的货币，用比特币基础设施来保证储备资金的安全。
+- 企业可以创建企业货币，比如航空里程的奖励点数甚至是普通的优惠券。
+- 发行者可能想发布彩色币来代表储蓄，允许人们进行交易，比如“币邮-美元（Bitstamp-USD）币”或者是某些黄金存储公司发行的“金币”。
+- 分布式管理数字收藏品的所有权，比如原创艺术品。就像今天艺术品收藏者买卖价值数百万美元的原创油画作品一样，彩色币允许我们同样的买卖纯数字艺术品，比如歌曲、电影、电子书和软件，同样利用彩色币在比特币区块链上保存这些创作的所有权。
+- 利用彩色币来进行交易和管理访问和订阅服务。比如，博物馆、地铁或像Netflix一样的在线服务可以发布基于彩色币的智能手机应用软件来提供人们的门票的所有权的数字签名，来保证这些门票同时是可转移的、纯数字的和安全的不可复制的。
+
+## 概念
+
+### 创世交易
+
+这个理念是通过创世交易创建新货币。
+
+创世交易里有曾经转移进来的一定数量的比特币。这些比特币将会用来创建新货币的价值。
+
+新货币起源于比特币被转移进去的那个地址，这个地址将控制新货币的初始分配。
+
+我们将创建新货币的轻客户端，用一个特殊的方法对新货币进行记账。
+
+首先找到那些发送地址来自创始交易的平台地址，然后检查每一个交易的交易记录确认该交易是否来源于创世交易。
+
+如果我们将创世交易的金额乘以一个新货币的初始稀释系数，我们就得到了用户所拥有的新货币的金额。比如：用0.00001BTC = 1 新货币。新货币客户端的分布创建了一个围绕特别创世交易的社区。这将这些彩色币和其他所有的比特币区分出来，因此这个使用比特币基础设施的在比特币网络上层的mini-eco系统将拥有浮动的价值。
+
+·
+·
+·
+
+彩色币的创世交易必须满足特定的输入和输出规则。
+
+#### 输入
+
+创世交易的输入需要考虑以下两点：
+
+1. 不能重新发行的染色 这种情况下输入是不相关的，一旦交易发生，发行者再无任何权力，所有的事情是交易本身（特别是交易的输出）
+2. 可重新发行的染色 这种情况下发行者需选择一个安全地址作为“发行地址”，并将来源于该地址的交易的输出设置为0。随后发行者可以在输出0时用同一个地址创造另外一个创世交易来创造更多单位的彩色币。创世交易的输入1+总是与彩色币协议的预期是不相关的。增加额外输入的唯一目的是你没有足够的支付彩色币创世本身所需的输入。同样请注意，一个发行地址最多为一个可重新发行的染色负责，而且一个发行地址为可重新发行的染色负责的话就不能为不能重新发行的染色负责。
+
+#### 输出
+
+彩色币创世的输出由一组输出组成：发送彩色币给初始的所有者，跟随着一个OP_RETURN数据输出，然后是一个或者多个返回给发行者的多余的未染色的比特币的找零输出。一个OP_RETURN数据输出作为一个标准的输出将被允许存储80字节的数据，标识出这个交易为彩色币交易的所有数据都将被包含在这个数据区域内。该数据区域组织如下：
+
+        [0...4]: [0,67,67,80,0] (两边用0填补的“关键控制点”)
+        [5...6]: 协议版本号 (当前为 0)
+        [7...8]: 染色规则(0代表不能重新发行的染色, 65535代表可以从创世地址随意重新发行的染色)
+        [9..79]: 可选 (关于染色的数据)
+
+该方案旨在协议分层级；未来“颜色”将永远留在字节0…4，版本号将永远留在字节5…6，但是未来的版本里7-79字节可能包含不同的意图而不只是染色规则和可选数据。即使在版本0里，未来的染色规则可能在9-79字节指定一些数据。目前9-79字节中的数据可以是任何格式，一种潜在的可能是让发行者在其中包含他发行的彩色币的名字及网址。
+
+注意，对于可重新发行的染色，创世地址需要高度的安全性，因为一旦攻击者获得了该地址的私钥将拥有无限发行那种颜色的彩色币的权力。因此，强烈推荐该创世地址采用至少2-of-3的多重签署，甚至3-of-5多重签署并冷存储的私钥保存。对于不可重新发行的染色，除非发行人打算持有一部分发行的彩色币否则不需要额外的安全防护，在这种情况下，同样的安全注意事项适用于任何其他数字资产。
+
+下载所有区块链数据的完整的客户端将尝试处理每一个创世进程，并尽可能多的保存染色的信息。轻客户端，包括在线客户端，需要用户通过提交创世交易的哈希值来导入颜色，此时用户查询服务器获得关于染色的创世交易的准确信息。
+
+例子：
+
+        inputs: [
+                17ztLiaGdWcWFX8CgYqWGQPEizepPLsSrb : 500000,
+                19GAFukX9ixSDLy1p2UEed2mpDQ69QPUXr : 2125735,
+                1MyK5te6U6zGoom68nVEzTU2x949ReNySN : 2500000
+
+        outputs: [
+                1LQhUnH2UY9cuLh8qvHUNPL3GgLVWU5ziD : 1000000,
+                1PEFUd66e2Q7w4w4KisZRSaupNJz7K7dpL : 1000000,
+                1PmqmJGRxpKx45FHLTBmteKQxViHgm4Mxi : 1000000,
+                1DCo3v1gSqU6g2GGDz9d4BD35h9cARe5dy : 2000000,
+                OP_RETURN : [ 0 67 67 80 0 0 0 255 255 ] + [0] * 71
+                1MyK5te6U6zGoom68nVEzTU2x949ReNySN : 115735
+
+首先我们来看这笔交易的输出。注意输出第五行的OP_RETURN输出，它的前5个字节是协议指定的[ 0 67 67 80 0 ]，因此该笔交易是彩色币创世交易，输出的前0-4行都是彩色币输出。因此地址1LQhU, 1PEFU, 和1Pmqm 将拥有990000的彩色值，而地址1DCo3将有1990000的彩色值。（从每个彩色值减去10000的原因是作为转账交易部分的证据，在这里每个输出所需的10000聪作为“填充”的规则）接下来，看下OP_RETURN本身，7-8字节是[ 255 255 ],，因此这是可重新发行的染色。输入第0行的地址是17ztLiaGdWcWFX8CgYqWGQPEizepPLsSrb,因此对于任何未来的含有输入0为17ztLiaGdWcWFX8CgYqWGQPEizepPLsSrb地址的创世交易所发行的彩色币是可以重新发行的。
+
+### 选择基于标签的染色的理由
+
+#### 基于标签的染色算法有一些优点：
+
+1、每笔交易的元数据最小化：对于每一笔交易的输出，不必单独保存每笔交易的彩色值，因为彩色值要么是数值和填充（如果输出是染色的），要么是0（如果输出是没有染色的）。另外，在多种染色背景下，算法被设计成一个输出永远不会多于1个色彩。因此，每笔交易输出所保存的唯一元数据就是它的色彩（或者潜在的可能是没有色彩）
+
+2、支持多种色彩：可以创建含有多种色彩的彩色币交易，即使在你没有意识到在交易中包含有其他色彩的交易也可以被处理。事实上，还可能用反向扫描（见下节）基于一个含有这些色彩的交易来自动检测和导入新的色彩
+
+3、没有最低的发送数量限制：由于填充参数，绕开了比特币的防尘规则，如果需要甚至可以发送1彩色值得交易。
+
+4、效率：如果某人打算在没有任何数据的情况下确定一个输出的色彩，那么他需要使用向后扫描算法，潜在的指数增长的输出需要进行扫描。由于基于序列的染色算法忽略了所有的默认的未非染色交易，这个进程将大大加快。
+
+#### 弱点：
+
+1、效率：虽然这种算法比更幼稚的方法比如基于顺序的染色有巨大的改进，向后扫描的效率理论上仍然是指数的（因为一个输出可以有多个输入），因此一个安全的“轻客户端”处理彩色币的效率比处理比特币低得多。我们只知道两个缓解这个问题的方法。第一个，可以采用一个染色规则：让输出分裂而不是重新组合起来，依靠一个活跃的发行者重新组合起来。通过限制每一个输出都有一个输入为其根源，这解决了反向扫描难度指数级增长的问题。第二个，可以将彩色币移植到一个单独的专用网络，最有可能的是与比特币合并采矿的一个替代币。
+
+2、SIGHASH_ANYONECANPAY不起作用：SIGHASH_ANYONECANPAY是一个输入的签名者可以添加大致如下内容的“操作码”，我同意在包含在这个输入到指定输出的交易中发送资金，如果输入足够支付输出，我不在乎其他输入在哪里。通常，一个签名标示整个交易，包括特定的输入和输出。对于彩色币，SIGHASH_ANYONECANPAY不起作用，因为比特币的脚本语言不是色彩敏感模式，因此没有办法要求其他交易输出是任何指定的色彩。这是彩色币的一个基本限制。
+
+3、每笔交易最多31个输出：技术上看，32个输出是可行的，但是为了避免意外用序列号4294967295 (二进制表示： 11111111 11111111 11111111 11111111)作为输入发送给所有的输出，代码将会更复杂一些。
+
+### 彩色币
+
+彩色币是在历史上的创世交易里面被转移过的比特币。因为所有的比特币交易记录被保存在 block chain里面，所以可以查询每一个比特币是否被染色。（染色的意思是这个比特币曾经的一次交易记录发生在创世交易里）
+
+1、因为这些彩色币本身就是比特币，所以彩色币可以通过比特币系统从一个地址转移到另外一个地址。
+
+2、因为我们有一种方法去区分比一般比特币更稀有的彩色币，因此彩色币的价值会基于比特币的价值以及对彩色币的需求而变化。
+
+### 初始分布
+
+新货币初创的时候，所有该货币的价值归属于一个单独的个人或团队；最后的分布是所有的价值从创始者转移给所有的客户。这两个阶段的过程就是货币的分布。
+
+当初始分布完成后，创始者将不再经济中扮演中心的角色，客户完全按照他们认为适合的方式管理他们的经济。
+
+在初始分布阶段，新货币能获得客户的信任，并在经济中创建价值分布的结构。
+
+### 分布算法
+
+分布算法是创始者选择的释放他所持有的货币到经济实体的方法。举一个简单的例子，为你所认识的人创造一种货币并平均分配给大家。首先这些人先安装客户端，然后用客户端将自己的地址发送给货币创造者，然后货币创造者通过创世交易将初始货币数量等分成等量的BTC发送给大家。当所有人收到自己的那一份，创始者手里的比特币都发送光，新货币就完成了在客户之间的等量分布。
+
+现实中，创始者既不知道新货币将有多少账户数量，也不可能知道哪些人愿意参与进他的经济体。某种程度上，他可以创建并执行一些邀请机制，在这种机制作用下每一个新的潜在用户可能邀请更多的客户参与进来。
+
+这些将对社交网络身份验证、社交图谱蔓延、担保系统、短信认证、独一无二的侵入保护系统、实物认证等等的发展大有帮助。这些方法可以用来在初始分布中最大限度的减少欺诈。
+
+另外一个可能的方法是每一个邀请要消耗新用户一定量的比特币，来以此建立激励，避免人为操纵eco系统。
+
+## 结构体系
+
+目前看来bitcoinJS这个项目有一个更好的分离的实体来集成和建设轻客户端，轻客户端可以让客户不用在电脑上安装任何专用软件的情况下轻松完成交易的签约。
+
+理念是在节点-通道的应用程序编程接口创建另外一个协议层，通过创世交易来获取账目余额。
+
+## 要求
+
+- 概念验证的轻型货币客户端
+
+- 查询余额
+
+- 应用程序接口（API）: 获取余额(比特币地址，创世交易)
+
+- 发送货币
+
+- 要能在客户端中签约交易并发送到出口节点
+
+- 在客户端中生成新地址
+
+- 最好有交易记录
+
+## 路线图
+
+- 拥有安全的分割关键架构
+
+- 密码保护交易
+
+- 创建自定义货币模式 (定义创世交易, 生成客户端)
+
+## 备忘录
+
+- 交易机制
+
+- 追踪区块链的基准数据库
+
+- 思考其扩展性
+
+- 思考费用模型
+
+- 理解钱包（私匙）存储的地方
+
+## 最近的进展
+
+序决策逻辑下的弱着色概述及探讨
+
+- <https://docs.google.com/document/d/1pOaWe1fWdcUUKdyXz3rMWQneGLfTg89QaIBkS91nngE/edit#>
+
+Alex的序决策逻辑下的弱着色理论:
+
+- <https://github.com/killerstorm/colored-coin-tools/blob/master/colors.md>
+
+Alex还建立了一个支持彩色币的 BitcoinArmory 客户端（作者已经声称放弃，并开发新客户端）
+
+- <https://github.com/etotheipi/BitcoinArmory>
+
+在bitcoinjs上实现序决策逻辑下的弱着色的chrome浏览器插件。
+
+- <https://github.com/0i0/bitcoinjs-color>
+- <https://github.com/0i0/bitcolor-chrome-ex>
+
+围绕着比特币协议层上的多种货币的成长型社区网站
+
+- <http://www.bitcoinx.org>
+
+原文链接：[英文白皮书](https://docs.google.com/document/d/1AnkP_cVZTCMLIzw4DvsW6M8Q2JC0lIzrTLuoWu2z1BE/edit?pli=1) 谷歌文档
