--- a/区块链知识.md
+++ b/区块链知识.md
@@ -1,6 +1,8 @@
+# 区块链相关重点信息
+[TOC]
 
-
-[aaa](公链/侧链白皮书.md)
-[[公链/侧链白皮书]]
+## 重要的公链
+- [比特币白皮书：一种点对点的电子现金系统](公链/比特币/比特币白皮书.md)
+- [aaa](公链/侧链白皮书.md)
 
 
