--- a/应用场景/行业-资源变现/流量矿石.md
+++ b/应用场景/行业-资源变现/流量矿石.md
@@ -1,14 +1,15 @@
-流量矿石：共享CDN
+# 流量矿石：共享CDN
                                                    
 由流量矿石所引出的“共享CDN”模式，通过面向公众部署智能终端流量矿石宝盒，构建“无限节点”的共享CDN网络。共享CDN网络汇聚闲置的网络带宽、存储空间和计算能力，并依照需求对闲置资源进行最优化实时调度，供向存在巨大资源缺口的互联网企业。通过公平透明的区块链技术原理向资源分享者提供基于贡献量的奖励。奖励的流量矿石将成为连接闲置资源供需双方，提升闲置资源利用率，降低需求方资源采购成本和激励共享行为的有效纽带。
 
-II. 中心化互联网服务的软肋
+## 中心化互联网服务的软肋
 实际上，互联网热门内容的流量是冷门内容的几十乃至成百上千倍，即互联网资源的消耗绝大部份是高度集中在少数热门内容上的。而每一个刚刚形成热点的内容，都可能在极短的时间内获得广泛的公众关注和点击。因为在常规的C/S网络架构中，无论内容热门与否，用户都需要向少数中心化的服务器去请求获取，海量服务的请求将极大冲击并考验互联网服务能力。这使得互联网服务者又不得不耗费巨量成本对极其少数热门内容进行支持服务。而热点内容通常具有不可预知性，因此任何中心化的服务都将面临巨大挑战，并难以通过较低成本的方式进行应对。而在共享CDN生态中，这样的成本实际上是可以得到极大削减的。              
                                                 
 在共享CDN在运营过程中，随着资源需求方、调度服务集群和终端资源共享者之间的不断交互，热门互联网内容将根据请求热度和访问的实际情况，依照调度指示在数量庞大、分布广泛的终端上得到充分冗余，甚至可实现潜在热点内容的预先存储，即实现了“无限节点”共享CDN网络的构建。届时，互联网热门内容的获取将有相当一部分不需依赖少数中心化的互联网服务器，而是来自于共享CDN终端之中。
 “共享CDN”通过在用户侧部署终端，并采用基于智能调度的点对点传输方式实现用户闲置网络、存储和计算资源的共享，并定向供给资源需求者。“共享CDN”的点对点技术基因决定了其天生的耐攻击、高容错特点。且网络组织结构弹性极强，维护成本极低，随着网络规模的逐步扩展，也将不断提升系统整体的资源储备和服务能力。
 因为“共享CDN”上是将无数离散闲置的资源通过智能调度的方式整合输送向实际的需求方，因此可以极大的减少资源实际需求方在资源采购上的成本投入。资源实际需求方可将节约下来成本以更廉价的方式的投入“共享CDN”，通过“共享CDN”向资源分享者，即购置使用流量矿石宝盒的公众，提供一定奖励以获得闲置资源。进而形成需要资源的互联网服务商和共享闲置资源的用户之间的良性互动关系，减少资源需求方对中心化互联网资源平台的依赖。
-III. 垄断,缺乏生人互信的必然结局
+
+## 垄断,缺乏生人互信的必然结局
 互联网中心化所带来的问题近年来逐步凸显。以互联网巨头为代表的垄断者左右着整个互联网的资源，权利和利益分配格局，甚至决定着很多初创者和恪守网络中立性原则组织的生死。
 垄断之所以形成的原因，是因为市场活动参与者无法实现互相之间的低成本互信，互信成本之高昂使得他们不得不去寻找第三方中介来为相互之间的信用背书，这种信任机制的中心化将必然导致中心化机构成为成为价值链的核心。因此在选择第三方中介时又会本能的选择供需关系更加旺盛，资源流转分配更加高效集约的中介平台，造成了强者恒强弱者恒弱的局面，最终导致中介平台的过度中心化，即资源、权利和利益分配的中心化。而这样的格局已经违背了以平等、开放为核心的互联网精神。
 “共享CDN”将改变传统网络架构中内容、存储、服务和计算能力的中心化C/S模型，挑战在漫长的竞争中逐渐形成的互联网资源与权利分配的中心化格局，转而向去中心化演进。“共享CDN”旨在创建一个回归初心的，平等、开放的去中心化的互联网生态。在这样一个生态上需要一个载体来衡量资源共享行为的参与者为共享生态所做的贡献，并可量化，使之成为生态价值传导的载体。而一个去中心化生态显然需要一个公开、透明、去中心化的媒介承载这样的使命。
