--- a/公链/白皮书内容提炼/内容提炼（初级）.md
+++ b/公链/白皮书内容提炼/内容提炼（初级）.md
@@ -62,6 +62,65 @@ PoW：工作量证明->PoS（权益证明）：用以解决PoW中大量资源被
 
 侧链不能发行，可按需定制账本、共识机制、交易类型、脚本和合约支持
 
+## DeepOnion
+
+比特币缺陷：比特币交易会泄露你的IP地址和身份等隐私；随着区块链规模的扩大（由于BTC的年龄和交易次数）比特币交易完成的时间会越来越长，目前单块的确认时间为350分钟。由于大多数服务需要至少6次确认才能验证，所以多达35小时的时间才能发送和接收付款。
+
+洋葱的主要特点和优势所在，概括为三个词，即：匿名、安全和快速。
+
+技术：PoS + x13算法（13轮哈希）
+好处：比单一算法更安全
+
+## BitcoinX
+
+BitcoinX的理念是在技术上将比特币网络从其货币价值中抽离出来，用比特币网络明确交易并避免双重支付。
+彩色币也是比特币，所以它也可以可以使用比特币网络，从一个地址传送到另一个地址。
+
+## Byteball
+
+Byteball与常见的众多虚拟币不同，它没有采用区块链技术，而是采用DAG技术。信息分为Unit存储，各个Unit之间通过Hash连接在一起。
+
+Byteball相较于比特币，克服了：
+
+1. BTC存储信息量收到区块大小的限制，而Byteball大小不限
+2. BTC收到信息传输速度限制，至少要等待6个区块才能确认交易是否生效，而Byteball可以很快确认
+3. BTC的PoW机制需要耗费大量资源，Byteball采用新的共识机制（通过对比存储单元unit之间序列数序确定正确的链条），大大减少消耗
+4. BTC中交易的确定性很低，虽然不确定性指数级递减；Byteball中对交易是否成功有明确的定义
+5. BTC的价格不够稳定，没有标准的资产Byteball通过花费机制将Byte和现实货物的价格联系起来，形成了一种负反馈的调节机制，Byte的价值将更加有效
+6. BTC可以被追踪，Byteball的隐私性更好
+7. Byteball可以更好的匹配现有的金融资产
+
+## RootStock
+
+根链，一个基于比特币的具有图灵完备的智能合约平台。根链是比特币的侧链，其支付货币是从比特币区块链里的比特币转化过来的，不产生新的货币。
+
+根链加强了比特币的以下特性：
+
+- 允许参建智能合约的图灵完备性的根链虚拟机（RVM）。
+- 第一个交易确认时间降至平均10秒。
+- 基于联合的门限签名方案实现的安全联合工作量证明挖矿机制。
+- 嵌入式低延迟快速中继骨干网络到点对点的八卦网络。
+- 双向锚定使用侧链（目前是一个联合锚定，全自动的比特币协议的锚定）
+
+## 公信宝
+
+公信宝是一个点对点的去中心化的数据交易平台。基于区块链的去中心化数据交易所，提供数据点对点交易，解决了交易多方的信任问题。
+
+特点:
+
+- 无数据沉淀，公信宝数据交易所不缓存任何数据源数据，确保数据源生产者的利益最大化，避免了自有数据泄露的风险，打破了传统中心化技术中对交易数据进行缓存的缺陷
+- 点对点数据传输，在交易查询匹配后，数据以点对点方式传输，写入区块链的哈希值作为完成该笔交易的存证
+- 数据非对称加密，通过非对称加密技术，买卖双方公私钥配对后数据方可解密，保证了交易数据被泄露和盗取的风险
+- 数字资产所有权认证，每条数据都拥有独一无二的数据版权，确保数据生产者拥有唯一版权和永久收益权
+- 精准数据，无论爬虫工具获得的个人身份数据，还是联盟会员提供的特殊数据，公信宝数据交易所的机制保证了数据最大限度的准确性和新鲜度
+- 白名单技术，公信链以白名单划分特定数据交易客户群，可组建政府间数据交易联盟、金融数据交易联盟等，解决了在同一区块链中进行多个不同领域的数据交易
+- 匿名交易，交易多方可设置匿名交易模式，维护了交易各方隐私性，特别适应于互联网金融行业的履约金融数据交换
+- 信用贡献证明机制，解决了拥有数据量大小不同企业之间可进行平等交换
+- 授权认证，涉及个人的敏感数据，必须获得本人同意，在授权后方可交易，让个人敏感数据交易阳光化和透明化，有效遏制了个人信息泄露
+- 高频交易支持，公信链采用DPOS机制，可使区块确认时间缩短至3秒，先进的高频交易技术，使得公信宝数据交易所达到每秒百万次交易频率
+- 公平定价与实时结算，数据单价由联盟会员共同投票决定，具有灵活调整的特点，充分发挥了市场调节规律，尊重了各联盟会员单位的定价权。公信币使得实时结算便捷化、透明化，时间戳技术让客户消费有据可查
+- 准入和惩罚机制，公信宝对联盟企业严格审核，有数据生成能力和切实需求的企业方可进入联盟，对数据造假者执行严厉的惩罚机制，有效遏制了假数据的产生
+
 ## 以太坊：可编程区块链
 
 相比于比特币，以太坊每个网络节点都运行着一个以太坊虚拟机，完整节点中还多了静态代码，与之相关的账户信息和代码此时的状态
@@ -78,19 +137,48 @@ PoW：工作量证明->PoS（权益证明）：用以解决PoW中大量资源被
 智能合约：以计算机程序的方式来缔结和运行各种合约。->去中心化
 账户：比特币没有账户而采用UTXO模型记录系统状态，导致可通过交易历史推算出用户余额。以太坊以账户记录系统状态，存储余额信息、智能代码和内部数据等。支持不同账户间转移数据。
 
-## DeepOnion
-
-比特币缺陷：比特币交易会泄露你的IP地址和身份等隐私；随着区块链规模的扩大（由于BTC的年龄和交易次数）比特币交易完成的时间会越来越长，目前单块的确认时间为350分钟。由于大多数服务需要至少6次确认才能验证，所以多达35小时的时间才能发送和接收付款。
-
-洋葱的主要特点和优势所在，概括为三个词，即：匿名、安全和快速。
-
-技术：PoS + x13算法（13轮哈希）
-好处：比单一算法更安全
-
 ## DFINITY
 
 DFINITY是一个与以太坊兼容的智能合约平台，引入了一系列革命性的想法来解决性能、扩展性和治理的问题。
 DFINITY是PoS系统，使用概率插槽协议可提高25每区块事务数，使用安全分布式密钥生成（DKG）协议，使组成员可以不依赖中心化PKI生成组签名密钥。采用区块链神经元系统（BNS），具有大量管理的能力。
+
+## EOS
+
+EOS定位下一代区块链智能合约平台，致力于解决当前区块链技术中的一些关键挑战：性能、用户体验和治理。
+
+1. EOS通过引入（如代理权益证明（DPoS））、并行处理、加快验证和其他优化技术来实现超越以太坊的性能水平。
+2. EOS凭借免费交易模式来推广应用服务（即智能合约），EOS通过使用动态部分预留系统来为用户分配交易所需的带宽，网络根据持有代币占比为用户分配交易所需带宽，并且会参考当时网络的拥塞程度动态调整。
+3. 在EOS中由用户选出的记账者负责执行某些治理职能，占多数的（17/21或大约80％）当选者可以有权冻结账户、更新有缺陷的智能合约代码、决策是否分叉。
+
+## IOST
+
+IOST基于分片技术的区块链基础链。
+
+** 特点：**
+
+1. Distributed Randomners Protocol (DRP)，确保分片结点随机数列产生的安全性
+
+2. Efficient Distributed Sharding (EDS)，核心高效分布式分片技术
+
+3. TransEpoch，分片验证者协议
+
+4. Atomix，原子协议
+
+5. Proof-of-Believable consensus approach，置信度证明共识机制
+
+6. Micro State Blocks (MSB)，微型块，用来节省存储空间
+
+## NEO
+
+NEO 是利用区块链技术和数字身份进行资产数字化，利用智能合约对数字资产进行自动化管理，实现“智能经济”的一种分布式网络。
+
+技术：
+
+1. 共识机制DBFT（Delegated Byzantine Fault Tolerant）
+2. 智能合约体系NeoContract
+3. 跨链互操作协议：NeoX，分为两个部分：“跨链资产交换协议”和“跨链分布式事务协议”
+4. 分布式存储协议：NeoFS，NeoFS 计划通过代币激励机制和建立骨干节点的方式来解决在冗余度和可靠性之间寻找平衡点的矛盾
+5. 抗量子密码学机制：NeoQS
 
 ## 应用：
 
