--- a/应用场景/行业-医疗领域/阿里健康区块链.md
+++ b/应用场景/行业-医疗领域/阿里健康区块链.md
@@ -6,7 +6,7 @@
 ## 技术架构保障数据安全
 阿里健康在常州区块链项目中更是设置了数道数据的安全屏障，首先，区块链内的数据存储、流转环节都是密文存储和密文传输，即便被截取或者盗取也无法解密。其次，专门为常州医联体设计的数字资产协议和数据分级体系，通过协议和证书，明确约定上下级医院和政府管理部门的访问和操作权限。最后，审计单位利用区块链防篡改、可追溯的技术特性，可以精准的定位医疗敏感数据的全程流转情况。
 
-![常州医联体区块链](media/常州医联体区块链.jpg)
+![常州医联体区块链](media/阿里健康区块链-常州医联体区块链.jpg)
 
 
 ## 未来构建智慧医疗价值基础
