--- a/应用场景/行业-积分联盟/积分豆.md
+++ b/应用场景/行业-积分联盟/积分豆.md
@@ -13,5 +13,5 @@
 - 以商户积分为例，电信的积分可以积分商城商品形式兑换为积豆，并在积分豆平台上与消费者在其他商户的积分打通，如兑换为东航里程。
 
 ## 解决方案
-![积分豆解决方案](media/积分豆解决方案.jpg)
+![积分豆解决方案](media/积分豆-积分豆解决方案.jpg)
 
