--- a/应用场景/行业-金融/众安保险.md
+++ b/应用场景/行业-金融/众安保险.md
@@ -12,7 +12,7 @@
 - 截至2017 年2 月底，众安保险已采用区块链存储技术处理健康险电子保单21.27 万份，涉及保费收入3736.36 万元。
 
 ## 解决方案
-![众安保险解决方案](media/众安保险解决方案.png)
+![众安保险解决方案](media/众安保险-众安保险解决方案.png)
 
 
 
